kubernetes/generatedManifests/test/infrastructure/linkerd-viz/1-manifest/networking.k8s.io_v1-ingress-linkerd-viz-linkerd-viz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-cluster-issuer"},"labels":{"app.kubernetes.io/managed-by":"pulumi"},"name":"linkerd-viz-ingress","namespace":"linkerd-viz"},"spec":{"ingressClassName":"nginx","rules":[{"host":"linkerd.localhost:8080","http":{"paths":[{"backend":{"service":{"name":"web","port":{"number":8084}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["linkerd.localhost:8080"],"secretNa [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
  name: linkerd-viz-ingress
  namespace: linkerd-viz
spec:
  ingressClassName: nginx
  rules:
  - host: linkerd.localhost:8080
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 8084
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - linkerd.localhost:8080
    secretName: linkerd-nginx-ingress-tls
